--- a/recipes/calculator/templates/index.html
+++ b/recipes/calculator/templates/index.html
@@ -5,7 +5,8 @@
     <title>Рецепты</title>
 </head>
 <body>
-{% for ingredient, amount in context.items %}
+
+{% for ingredient, amount in name.items %}
     <p>{{ ingredient }}: {{ amount }}</p>
 {% empty %}
     <p>Такого рецепта не знаю :(</p>
